--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       
       <a href="project1.html"><li> Project 1</li></a>
 
+      <a href="project2.html"><li> Project 2</li></a>
+      
   </body>
 
 </html>
