--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 
       <a href="project2.html"><li> Project 2</li></a>
       
+      <a href="project3.html"><li> Project 3</li></a>
+      
   </body>
 
 </html>
